--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mocha": "^7.0.1"
   },
   "dependencies": {
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0"
   }
 }
